notifications/base/webhook-receiver/http-route.yaml
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: webhook-receiver-route
  namespace: flux-system
  labels:
    gateway: http
spec:
  gateways:
    allow: All
  # hostnames:
  #   - dudo.dev
  rules:
    - matches:
        - path:
            type: Prefix
            value: /cd
      forwardTo:
        - serviceName: webhook-receiver
          port: 80
